# wellswatch

./: .gitignore  LICENSE  README.md  pyproject.toml
src/wellswatch/: __init__.py  mapping.py  zenodo.py
tests/: test_wellswatch.py
