[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wellswatch"
version = "0.1.0"
description = "Access and visualize groundwater-status predictions for monitoring wells in Greece."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]

authors = [
    {name = "Evangelos Tziritis", email = "e.tziritis@elgo.gr"},
    {name = "Miltiadis Iatrou", email = "m.iatrou@hotmail.gr"},
    {name = "Christos Drougas", email = "xristos2002messini@gmail.com"},
    {name = "Spyridon Tasoglou"},
    {name = "George Arampatzis"}
]

maintainers = [
    {name = "Miltiadis Iatrou", email = "m.iatrou@hotmail.gr"}
]

keywords = [
    "groundwater",
    "wells",
    "Greece",
    "Zenodo",
    "hydrology",
    "monitoring"
]

dependencies = [
    "pandas>=2.0",
    "geopandas>=0.14",
    "matplotlib>=3.7",
    "requests>=2.31",
    "openpyxl>=3.1"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "build>=1.2",
    "twine>=5.0"
]

[project.urls]
Homepage = "https://github.com/Mil-afk/wellswatch"
Repository = "https://github.com/Mil-afk/wellswatch"
Issues = "https://github.com/Mil-afk/wellswatch/issues"

[tool.setuptools.packages.find]
where = ["src"]